--- a/android/.gitignore
+++ b/android/.gitignore
@@ -4,6 +4,7 @@ gradle-wrapper.jar
 /gradlew
 /gradlew.bat
 /local.properties
+/app
 GeneratedPluginRegistrant.java
 
 # Remember to never publicly share your keystore.
